Bug 1434020 - make body search also look in bodies of attached messages. r=aceman